traefik/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: order
  labels:
    app: nginx
spec:
  #type: NodePort
  ports:
  - port: 8080
    #nodePort: 30001
    targetPort: 80
    protocol: TCP
    name: nginx-port-name
 
  selector:
    app: nginx



---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: order-ing
  namespace: order
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: k8s.10.1.4.36.xip.io
    http:
      paths:
      - path: /nginx  #路径 
        backend:
          serviceName: nginx
          servicePort: nginx-port-name
