traefik/orderservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice-s
  namespace: ming
  labels:
    app: orderservice-s
spec:
  #type: NodePort
  ports:
  - port: 8080
    #nodePort: 30001
    targetPort: 8080
    protocol: TCP
    name: my-port-name
 
  selector:
    app: orderservice-p


---


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: orderservice-ing
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: k8s.test.com
    http:
      paths:
      - path: /orderservicetest  #这里估计添加了一个test的字符  
        backend:
          serviceName: orderservice-s
          servicePort: my-port-name
